--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,6 @@
 
 <a routerLink="displayhelloworld">Display Hello World</a>
 <br>
+<a routerLink="showhellobutton">Show Hello Button</a>
+<br>
 <router-outlet></router-outlet>
