--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,6 @@
 <br>
 <a routerLink="showhellobutton">Show Hello Button</a>
 <br>
+<a routerLink="displayname">Display Name</a>
+<br>
 <router-outlet></router-outlet>
