--- a/src/app/components/showhellobutton/showhellobutton.component.html
+++ b/src/app/components/showhellobutton/showhellobutton.component.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<button id="showHelloButton">Show Hello Button</button>
+<button id="showHelloButton">Hello World</button>
 <div id="helloMessage"></div>
 
 <script>
