--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,6 @@
 <br>
 <a routerLink="displayname">Display Name</a>
 <br>
+<a routerLink="counter">Counter</a>
+<br>
 <router-outlet></router-outlet>
