--- a/src/app/components/counter/counter.component.html
+++ b/src/app/components/counter/counter.component.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<h2>Counter</h2>
+<h2>Increase Counter</h2>
 <input type="number" placeholder="Increase Counter" [(ngModel)]="number">
 
 <button type="button" (click)="show()" >Click</button>
