--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,6 @@
 <br>
 <a routerLink="simpleform">Simple Form</a>
 <br>
+<a routerLink="userage">User Age</a>
+<br>
 <router-outlet></router-outlet>
