--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,4 +12,6 @@
 <br>
 <a routerLink="userage">User Age</a>
 <br>
+<a routerLink="usergreeting">User Greeting</a>
+<br>
 <router-outlet></router-outlet>
