--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,4 +14,6 @@
 <br>
 <a routerLink="usergreeting">User Greeting</a>
 <br>
+<a routerLink="calculator">Calculator</a>
+<br>
 <router-outlet></router-outlet>
