--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,4 +16,6 @@
 <br>
 <a routerLink="calculator">Calculator</a>
 <br>
+<a routerLink="textlength">Text Length</a>
+<br>
 <router-outlet></router-outlet>
