--- a/src/app/components/displayhellowolrd/displayhellowolrd.component.html
+++ b/src/app/components/displayhellowolrd/displayhellowolrd.component.html
@@ -1,1 +1,11 @@
-<p>displayhellowolrd works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hello World Display</title>
+</head>
+<body>
+   <div>{{result}}</div>
+</body>
+</html>
