--- a/src/app/components/showhellobutton/showhellobutton.component.html
+++ b/src/app/components/showhellobutton/showhellobutton.component.html
@@ -4,24 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Show Hello Button</title>
-  <style>
-    #helloMessage {
-      margin-top: 20px;
-      font-size: 24px;
-      color: blue;
-    }
-  </style>
 </head>
 <body>
 
-<button id="showHelloButton">Hello World</button>
-<div id="helloMessage"></div>
+<button (click)="click()">Button </button>
+<div>{{message}}</div>
 
-<script>
-  document.getElementById('showHelloButton').addEventListener('click', function() {
-    document.getElementById('helloMessage').textContent = 'Hello World';
-  });
-</script>
 
 </body>
 </html>
