--- a/src/app/components/userage/userage.component.html
+++ b/src/app/components/userage/userage.component.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-
+<h2>Calculate Your Age</h2>
 <div>
   <label for="birthYear">Birth year: </label><br>
   <input type="number" id="birthYear" [(ngModel)]="birthYear">
