--- a/src/app/components/usergreeting/usergreeting.component.html
+++ b/src/app/components/usergreeting/usergreeting.component.html
@@ -5,16 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>User Greeting</title>
-  <style>
-    #greetingDisplay {
-      margin-top: 20px;
-      font-size: 24px;
-      color: darkblue;
-    }
-  </style>
 </head>
 <body>
-
+<h2>Personalized Greeting</h2>
 <div>
   <label for="name">Enter your name: </label><br>
   <input type="text" id="name" [(ngModel)]="name" name="name" required>
