--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,4 +18,6 @@
 <br>
 <a routerLink="textlength">Text Length</a>
 <br>
+<a routerLink="currencyconverter">Currency Converter</a>
+<br>
 <router-outlet></router-outlet>
