--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,4 +20,8 @@
 <br>
 <a routerLink="currencyconverter">Currency Converter</a>
 <br>
+<a routerLink="evenoddchecker">Even Odd Checker</a>
+<br>
+
+
 <router-outlet></router-outlet>
