--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,8 @@
 <br>
 <a routerLink="evenoddchecker">Even Odd Checker</a>
 <br>
+<a routerLink="wordreverser">Word Reverser</a>
+<br>
 
 
 <router-outlet></router-outlet>
