--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,8 @@
 <br>
 <a routerLink="wordreverser">Word Reverser</a>
 <br>
+<a routerLink="showdate">Show Date</a>
+<br>
 
 
 <router-outlet></router-outlet>
