--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,8 @@
 <br>
 <a routerLink="showdate">Show Date</a>
 <br>
+<a routerLink="showusername">Show Username</a>
+<br>
 
 
 <router-outlet></router-outlet>
