--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,8 @@
 <br>
 <a routerLink="showusername">Show Username</a>
 <br>
+<a routerLink="multiplicationtable">Multiplication Table</a>
+<br>
 
 
 <router-outlet></router-outlet>
