--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,6 +30,8 @@
 <br>
 <a routerLink="multiplicationtable">Multiplication Table</a>
 <br>
+<a routerLink="simplelogin">Simple Login</a>
+<br>
 
 
 <router-outlet></router-outlet>
