--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,8 @@
 <br>
 <a routerLink="simplelogin">Simple Login</a>
 <br>
+<a routerLink="fahrenheittocelsius">Fahrenheit To Celsius</a>
+<br>
 
 
 <router-outlet></router-outlet>
