--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,6 +34,8 @@
 <br>
 <a routerLink="fahrenheittocelsius">Fahrenheit To Celsius</a>
 <br>
+<a routerLink="bookmarklist">Bookmark List</a>
+<br>
 
 
 <router-outlet></router-outlet>
