--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,6 +36,8 @@
 <br>
 <a routerLink="bookmarklist">Bookmark List</a>
 <br>
+<a routerLink="charactercounter">Character Counter</a>
+<br>
 
 
 <router-outlet></router-outlet>
