--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,6 +38,8 @@
 <br>
 <a routerLink="charactercounter">Character Counter</a>
 <br>
+<a routerLink="palindromechecker">Palindrome Checker</a>
+<br>
 
 
 <router-outlet></router-outlet>
