--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,6 +40,9 @@
 <br>
 <a routerLink="palindromechecker">Palindrome Checker</a>
 <br>
+<a routerLink="temperatureconverter">Temperature Converter</a>
+<br>
+
 
 
 <router-outlet></router-outlet>
