--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,6 +42,8 @@
 <br>
 <a routerLink="temperatureconverter">Temperature Converter</a>
 <br>
+<a routerLink="shoppinglist">Shopping List</a>
+<br>
 
 
 
