--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,7 +44,8 @@
 <br>
 <a routerLink="shoppinglist">Shopping List</a>
 <br>
-
+<a routerLink="factorialcalculator">Factoria Clalculator</a>
+<br>
 
 
 <router-outlet></router-outlet>
