--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,6 +46,8 @@
 <br>
 <a routerLink="factorialcalculator">Factoria Clalculator</a>
 <br>
+<a routerLink="todomanager">To-Do Manager</a>
+<br>
 
 
 <router-outlet></router-outlet>
