--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,6 +48,9 @@
 <br>
 <a routerLink="todomanager">To-Do Manager</a>
 <br>
+<a routerLink="guessnumbergame">Guess Number Game</a>
+<br>
+
 
 
 <router-outlet></router-outlet>
