--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,6 +52,9 @@
 <br>
 <a routerLink="wordcounter">Word Counter</a>
 <br>
+<a routerLink="randomnumbergenerator">Random Number Generator</a>
+<br>
+
 
 
 
