--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,6 +54,8 @@
 <br>
 <a routerLink="randomnumbergenerator">Random Number Generator</a>
 <br>
+<a routerLink="multiplicationchecker">Multiplication Checker</a>
+<br>
 
 
 
