--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,6 +56,8 @@
 <br>
 <a routerLink="multiplicationchecker">Multiplication Checker</a>
 <br>
+<a routerLink="uppercaseconverter">Uppercase Converter</a>
+<br>
 
 
 
