--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -58,6 +58,8 @@
 <br>
 <a routerLink="uppercaseconverter">Uppercase Converter</a>
 <br>
+<a routerLink="wordshuffler">Word Shuffler</a>
+<br>
 
 
 
