--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,6 +64,8 @@
 <br>
 <a routerLink="usernamevalidator">Username Validator</a>
 <br>
+<a routerLink="interestcalculator">Interest Calculator</a>
+<br>
 
 
 
