--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -66,6 +66,8 @@
 <br>
 <a routerLink="interestcalculator">Interest Calculator</a>
 <br>
+<a routerLink="compoundinterestcalculator">Compound Interest Calculator</a>
+<br>
 
 
 
