--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,7 +68,8 @@
 <br>
 <a routerLink="compoundinterestcalculator">Compound Interest Calculator</a>
 <br>
-
+<a routerLink="fibonaccigenerator">Fibonacci Generator</a>
+<br>
 
 
 
