--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -70,7 +70,8 @@
 <br>
 <a routerLink="fibonaccigenerator">Fibonacci Generator</a>
 <br>
-
+<a routerLink="oddsumcalculator">Odd Sum Calculator</a>
+<br>
 
 
 
