--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,6 +72,8 @@
 <br>
 <a routerLink="oddsumcalculator">Odd Sum Calculator</a>
 <br>
+<a routerLink="currencyformatter">Currency Formatter</a>
+<br>
 
 
 
