--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -74,6 +74,8 @@
 <br>
 <a routerLink="currencyformatter">Currency Formatter</a>
 <br>
+<a routerLink="randomquotedisplay">Random Quote Display</a>
+<br>
 
 
 
