--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -76,7 +76,8 @@
 <br>
 <a routerLink="randomquotedisplay">Random Quote Display</a>
 <br>
-
+<a routerLink="uppercasegreeting">Uppercase greeting</a>
+<br>
 
 
 <router-outlet></router-outlet>
