--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -76,7 +76,9 @@
 <br>
 <a routerLink="randomquotedisplay">Random Quote Display</a>
 <br>
-<a routerLink="uppercasegreeting">Uppercase greeting</a>
+<a routerLink="uppercasegreeting">Uppercase Greeting</a>
+<br>
+<a routerLink="divisiblechecker">Divisible Checker</a>
 <br>
 
 
