--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -80,6 +80,8 @@
 <br>
 <a routerLink="divisiblechecker">Divisible Checker</a>
 <br>
+<a routerLink="primechecker">Prime Checker</a>
+<br>
 
 
 <router-outlet></router-outlet>
