--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -82,6 +82,8 @@
 <br>
 <a routerLink="primechecker">Prime Checker</a>
 <br>
+<a routerLink="leapyearchecker">Leap Year Checker</a>
+<br>
 
 
 <router-outlet></router-outlet>
