--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -84,6 +84,8 @@
 <br>
 <a routerLink="leapyearchecker">Leap Year Checker</a>
 <br>
+<a routerLink="vowelscounter">Vowels Counter</a>
+<br>
 
 
 <router-outlet></router-outlet>
