--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -86,6 +86,7 @@
 <br>
 <a routerLink="vowelscounter">Vowels Counter</a>
 <br>
-
+<a routerLink="squarerootcalculator">Square root Calculator</a>
+<br>
 
 <router-outlet></router-outlet>
