--- a/src/app/components/vowelscounter/vowelscounter.component.html
+++ b/src/app/components/vowelscounter/vowelscounter.component.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Leap Year Checker</title>
+  <title>Vowels Counter</title>
 </head>
 <body>
 <div>
