--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -88,5 +88,7 @@
 <br>
 <a routerLink="squarerootcalculator">Square root Calculator</a>
 <br>
+<a routerLink="gradecalculator">Grade Calculator</a>
+<br>
 
 <router-outlet></router-outlet>
