--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -90,5 +90,8 @@
 <br>
 <a routerLink="gradecalculator">Grade Calculator</a>
 <br>
+<a routerLink="percentagecalculator">Percentage Calculator</a>
+<br>
+
 
 <router-outlet></router-outlet>
