--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -92,6 +92,8 @@
 <br>
 <a routerLink="percentagecalculator">Percentage Calculator</a>
 <br>
+<a routerLink="dayofweekfinder">Day of the Week Finder</a>
+<br>
 
 
 <router-outlet></router-outlet>
