--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -94,6 +94,9 @@
 <br>
 <a routerLink="dayofweekfinder">Day of the Week Finder</a>
 <br>
+<a routerLink="discountcalculator">Discount Calculator</a>
+<br>
+
 
 
 <router-outlet></router-outlet>
