--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -96,6 +96,8 @@
 <br>
 <a routerLink="discountcalculator">Discount Calculator</a>
 <br>
+<a routerLink="textreplacer">Text Replacer</a>
+<br>
 
 
 
