--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -98,7 +98,6 @@
 <br>
 <a routerLink="textreplacer">Text Replacer</a>
 <br>
-
-
-
+<a routerLink="vowelreplacer">Vowel Replacer</a>
+<br>
 <router-outlet></router-outlet>
